feat: user's upgrades system
