# backend/src/main/java/com/sandsational/backend/dto/response/UserUpgradeResponse.java
@@ -1,0 +1,8 @@
+package com.sandsational.backend.dto.response;
+
+public record UserUpgradeResponse(
+        UserResponse user,
+        UpgradeResponse upgrade,
+        int level
+) {
+}
